--- a/8-28/p1/DESCRIPTION
+++ b/8-28/p1/DESCRIPTION
@@ -6,8 +6,14 @@ Authors@R:
            family = "Kane",
            role = c("aut", "cre"),
            email = "michael.kane@yale.edu")
-Description: Demonstrates package usage
+Description: Demonstrates package usage.
 License: LGPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Suggests: 
+    testthat,
+    knitr,
+    rmarkdown,
+    ggplot2
+VignetteBuilder: knitr
